--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,17 +1,17 @@
 ja:
   activerecord:
-    errors:
-      models:
-        book:
-          attributes:
-            title:
-              blank: "空になっています。入力してください。"
-            memo:
-              blank: "空になっています。入力してください。"
-            author:
-              blank: "空になっています。入力してください。"
-            picture:
-              blank: "空になっています。画像を選択してください。"
+    # errors:
+    #   models:
+    #     book:
+    #       attributes:
+    #         title:
+    #           blank: "空になっています。入力してください。"
+    #         memo:
+    #           blank: "空になっています。入力してください。"
+    #         author:
+    #           blank: "空になっています。入力してください。"
+    #         picture:
+    #           blank: "空になっています。画像を選択してください。"
     models:
       book: "書籍"
     attributes:
@@ -20,8 +20,7 @@ ja:
         memo: "書籍の概要・感想"
         author: "著者"
         picture: "書籍の画像"
-  # helpers: # ここから下を追加する
-  #   submit:
-  #     create: 登録する
-  #     update: 更新する
-  #     submit: 保存する
+  helpers:
+    submit:
+      create: 登録する
+      update: 更新する
