--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,7 +1,9 @@
 ja:
   books:
     new:
-      title: "新規登録"
+      title: "書籍データ：新規登録"
+    create:
+      title: ""
   views:
     page-nav:
       Edit this book: "書籍データの編集ページに行く"
