--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,8 +2,11 @@ ja:
   books:
     new:
       title: "書籍データ：新規登録"
-    create:
-      title: ""
+    edit:
+      title: "書籍データ：編集"
+    index:
+      title: "書籍データ：一覧"
+
   views:
     page-nav:
       Edit this book: "書籍データの編集ページに行く"
