--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,10 +2,11 @@ ja:
   books:
     new:
       title: "書籍データ：新規登録"
+      index_button: "書籍データ一覧"
     edit:
       title: "書籍データ：編集"
       show_button: "書籍の詳細ページ"
-      index_button: "書籍データ一覧"
+      back_button: "前のページに戻る"
     index:
       title: "書籍データ：一覧"
     
