--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,7 @@ ja:
       back_button: "前のページに戻る"
     index:
       title: "書籍データ：一覧"
+      show_button: "書籍データ：詳細"
       new_button: "書籍データ：新規登録画面へ"
     show:
       edit_button: "編集ページに移動"
