config/initializers/devise.rb config/locales/devise.views.ja.ymlの記載時効補正

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -27,7 +27,7 @@ ja:
         updated_at: 更新日
     models:
       user: ユーザー
-  devise:
+  users:
     confirmations:
       confirmed: メールアドレスが確認できました。
       new:
