config/locales/ja.yml config/locales/en.ymlにそれぞれ国際化の記述を追加

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,12 @@
 ---
 en:
+  users:
+    index:
+      books_index: "books_index"
+    show:
+      books_index: "books_index"
+
+      
   activerecord:
     errors:
       messages:
