app/views/layouts/application.html.erbに対応する翻訳をconfig/locales/ja.ymlとconfig/locales/en.ymlに追記

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,12 @@
 ---
 en:
+  layouts: 
+    application:
+      Logged in as: "Logged in as"
+      My page: "My page"
+      User edit: "Edit profile"
+      User index: "User index"
+      Logout: "Logout"
   users:
     index:
       email: "email"
