--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,5 +1,12 @@
 ---
 ja:
+  layouts: 
+    application:
+      Logged in as: "ログイン名"
+      My page: "マイページ"
+      User edit: "ユーザー編集"
+      User index: "ユーザー一覧"
+      Logout: "ログアウト"
   users:
     index:
       email: "Eメール"
@@ -11,7 +18,7 @@ ja:
       address: "住所"
       profile: "プロフィール"
       books_index: "書籍データ一覧"
-      
+
   activerecord:
     errors:
       messages:
