app/views/users/show.html.erbとapp/views/users/index.html.erbの翻訳漏れの修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,10 +9,12 @@ ja:
       Logout: "ログアウト"
   users:
     index:
+      User index: "ユーザー一覧"
       email: "Eメール"
       profile: "プロフィール"
       books_index: "書籍データ一覧"
     show:
+      My page: "マイページ"
       email: "Eメール"
       postal_code: "郵便番号"
       address: "住所"
