config/locales/ja.ymlに翻訳を追記

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,12 @@
 ---
 ja:
   activerecord:
+    models:
+      comment: コメント
+  comments:
+    comments:
+      no_comments: コメントはまだありません
+
     errors:
       messages:
         record_invalid: 'バリデーションに失敗しました: %{errors}'
