--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,25 +8,17 @@ ja:
         memo: "書籍の概要・感想"
         author: "著者"
         picture: "書籍の画像"
-        
-  books:
-    new:
-      title: "書籍データ：新規登録"
-      index_button: "書籍データ：一覧"
-    edit:
-      title: "書籍データ：編集"
-      show_button: "書籍の詳細ページ"
-      back_button: "前のページに戻る"
-    index:
-      title: "書籍データ：一覧"
-      show_button: "書籍データ：詳細"
-      new_button: "書籍データ：新規登録画面へ"
-    show:
-      edit_button: "編集ページに移動"
-      back_button: "前のページに戻る"
-      delete_button: "削除"
-      
 
+  views:
+    common:
+      show: "この%{name}を表示"
+      edit: "この%{name}を編集"
+      destroy: "この%{name}を削除"
+      new: "%{name}の新規作成"
+      back: "%{name}の一覧に戻る"
+      title_index: "%{name}の一覧"
+      title_new: "%{name}の新規作成"
+      title_edit: "%{name}の編集"
 
   helpers:
     submit:
