--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,28 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  activerecord:
+    models:
+      book: "Book"
+    attributes:
+      book:
+        title: "title"
+        memo: "memo"
+        author: "author"
+        picture: "picture"
+
+  views:
+    common:
+      show: "Show this %{name}"
+      edit: "Edit this %{name}"
+      destroy: "Destroy this %{name}"
+      new: "New %{name}"
+      back: "Back to %{name}"
+      title_index: "%{name}"
+      title_new: "New %{name}"
+      title_edit: "Editing %{name}"
+
+  helpers:
+    submit:
+      create: create
+      update: update
