config/locales/ja.ymlに翻訳を追記

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -196,6 +196,8 @@ ja:
       validation_error: "%{errors}があるため、この%{name}は保存できませんでした"
       title_show: "%{name}の詳細"
       sign_out: ログアウト
+    reports:
+      mentioned_from: この日報は以下の日報から言及されています
     pagination:
       first: '« 最初'
       last: '最後 »'
