--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -20,6 +20,12 @@ ja:
       title_new: "%{name}の新規作成"
       title_edit: "%{name}の編集"
 
+  controllers:
+    common:
+      notice_create: "%{name}が作成されました。"
+      notice_update: "%{name}が更新されました。"
+      notice_destroy: "%{name}が削除されました。"
+
   helpers:
     submit:
       create: 登録する
