en.ymlにも翻訳を追加

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -244,3 +244,5 @@ en:
     registrations:
       edit:
         title: "Edit account"
+  flash:
+    success_message: "Welcome! You have signed up successfully."
