存在しないreport_idを保存する時のエラー解消

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -235,6 +235,7 @@ en:
       notice_create: "%{name} was successfully created."
       notice_update: "%{name} was successfully updated."
       notice_destroy: "%{name} was successfully destroyed."
+      report_alert: "%{name} does not exist."
   layouts:
     menu:
       menu: Menu
