--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -209,6 +209,7 @@ ja:
       notice_create: "%{name}が作成されました。"
       notice_update: "%{name}が更新されました。"
       notice_destroy: "%{name}が削除されました。"
+      report_alert: "%{name}が存在しません。"
   layouts:
     menu:
       menu: メニュー
